TASpring change log

0.next

- improved default command selection

- added "fakemeta" key binding command to provide another modifier

- added "/water   [0-3]" to control water rendering in-game
  (the optional number is the mode; without the number, it rotates through the modes)
- added "/shadows [0-1]" to control shadow rendering in-game
  (the optional number means off/on; without the number, it toggles)

0.73b1

- [bugfix] Resource expendature now shows correct pull when economy is stalling.

- - Added transparency suport from texture2 in s3o drawing, requires advanced shading.
- added DualScreenMode configuration flag. 
    This causes the game view width to be one half of the screen width, so the minimap can take the other half. 
    You will need to spread your spring window across the 2 screens.
- geothermal vents with a geothermal unit on top will not create smoke.

- Added the following Unit FBI tags:
	canPatrol=1; Can the unit go on patrol
	canGuard=1; Can the unit guard things
	canAttack=1; Can the unit attack other units
	Reclaimable=1; Determines if a unit can be reclaimed by other units
	noAutoFire=0; (if set to 1, unit will fire once then switch to next target, and needs to be told to fire manually)
	canBuild (can the unit start new construction projects)
	canRepair (can the unit repair other things)
	canRestore (can the unit restore deformed ground)
	canReclaim (can the unit reclaim other things)
	canAssist (can the unit assist construction projects already started)

- added support for teamcolored nanospray (user option). Can be forced off by modder using gamedata/particles.tdf.
- new fbi tag shownanoframe: set to 0 to disable nanoframe while the unit is being built.
- new fbi tag shownanospray: set to 0 to disable nanospray.
- new fbi tag nanocolor: color of the nanospray and the nanoframe in red green blue format (white = 1 1 1).
  (These three fbi tags apply to the unit itself; not to the unit it's building.)
